--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/eunjoolee787/gh-pages">View on GitHub</a>
 
-          <h1 id="project_title">Gh-pages</h1>
+          <h1 id="project_title">JS Village</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
